--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-facilitaoc",
   "version": "1.0.0",
   "description": "Facilitador de ordens de carregamento, gerando PDF's baseados em arquivos modelo DOCX &amp; XLSX.",
-  "main": "src/server/app.ts",
+  "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/server/app.ts"
   },
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "pg": "^8.13.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.9",
+    "@types/pg": "^8.11.10",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
